# gravity

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: default.frag  default.vert  gravity.glsl  instanced.vert  positions.glsl
dependencies/: CMakeLists.txt
dependencies/FreeType/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
dependencies/entt/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/tiny_obj_loader/: CMakeLists.txt
src/: camera.cpp  camera.h  main.cpp  randomness.hpp  render_loop.cpp  render_loop.h  renderer.cpp  renderer.h
src/components/: components.h
src/resources/: mesh.cpp  mesh.h  shader.cpp  shader.h
src/systems/: gravity_system.cpp  gravity_system.h
src/world/: compute.cpp  compute.h  free_controller.cpp  free_controller.h  model.cpp  model.h  shape.cpp  shape.h  world.cpp  world.h
utils/: CMakeLists.txt  opengl.h
utils/stubs/: CMakeLists.txt
utils/stubs/easy/: profiler.h
